--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "16.10.0",
+    "npm": ">=6.0.0"
   }
 }
