--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.3",
     "firebaseui": "^6.0.1",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
