--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebaseui": "^6.0.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
