--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
+    "react-autocomplete-input": "^1.0.18",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
