--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0-beta1",
+    "chart.js": "^4.4.0",
     "firebase": "^9.8.3",
     "firebaseui": "^6.0.1",
     "jquery": "^3.6.0",
