--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ REACT_APP_STORAGE_BUCKET=StorageBucket
 REACT_APP_MESSAGING_SENDER_ID=messagingSenderId
 REACT_APP_APP_ID=appId
 REACT_APP_MEASUREMENT_ID=measurementId
+REACT_APP_VERSION=1
