--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-autocomplete-input": "^1.0.19",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.52.3",
     "sweetalert2": "^11.4.18",
     "web-vitals": "^2.1.4"
